--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,30 @@ button:hover {
 }
 
 .git img {
-	float: left;
-	margin-right: 10px;
-	margin-top: 5px;
+        float: left;
+        margin-right: 10px;
+        margin-top: 5px;
+}
+
+/* Entry screen overlay */
+#entryscreen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.8);
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 200;
+}
+
+.blink {
+        animation: blinker 1s step-start 0s infinite;
+}
+
+@keyframes blinker {
+        50% { opacity: 0; }
 }
